# phantom-process-collector

./: .gitignore  LICENSE  README.md  config.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  documentation_issue.yml  enhancement.yml  feature_request.md  feature_request.yml
collector/: Cargo.toml
collector/src/: api.rs  collector.rs  main.rs
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/api/: client.ts
dashboard/src/components/: GhostRoster.tsx  LineageMap.tsx  Timeline.tsx
dashboard/src/types/: index.ts
scorer/: api.py  main.py  models.py  pyproject.toml  scorer.py
scripts/: install-prereqs.ps1  reset.ps1  run.ps1
