[package]
name = "collector"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "collector"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
toml = "0.8"
anyhow = "1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
] }
